--- a/CSharp/GroupFormationAlgorithm/packages.config
+++ b/CSharp/GroupFormationAlgorithm/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Microsoft.Web.Xdt" version="2.1.1" targetFramework="net40-client" />
   <package id="Nancy" version="1.4.5" targetFramework="net40-client" />
+  <package id="Nancy.Hosting.Self" version="1.4.1" targetFramework="net40-client" />
   <package id="NuGet.Core" version="2.14.0" targetFramework="net40-client" />
   <package id="NUnit" version="2.6.1" targetFramework="net40-client" />
 </packages>
