--- a/CSharp/GroupFormationAlgorithm/packages.config
+++ b/CSharp/GroupFormationAlgorithm/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Microsoft.Web.Xdt" version="2.1.1" targetFramework="net40-client" />
+  <package id="Mono.Posix" version="4.0.0.0" targetFramework="net40-client" />
   <package id="Nancy" version="1.4.5" targetFramework="net40-client" />
   <package id="Nancy.Hosting.Self" version="1.4.1" targetFramework="net40-client" />
   <package id="NuGet.Core" version="2.14.0" targetFramework="net40-client" />
